force-app/main/default/objects/Project__c/fields/Amber_Threshold_Multiplier_c__c.field-meta.xml
<CustomField>
    <fullName>Amber_Threshold_Multiplier_c__c</fullName>
    <label>Amber_Threshold_Multiplier__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>