force-app/main/default/objects/Project__c/fields/Client_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Name__c</fullName>
    <label>Client&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>