force-app/main/default/objects/Project__c/fields/Cloud_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Type__c</fullName>
    <label>Cloud Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Community(Experience)</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>AI(Einstein)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>