force-app/main/default/objects/Project__c/fields/Direct_Payment_to_Anurag__c.field-meta.xml
<CustomField>
    <fullName>Direct_Payment_to_Anurag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Pmt to Anurag ?</label>
    <type>Checkbox</type>
</CustomField>