force-app/main/default/objects/Project__c/fields/Direct_pmt_to_Parag__c.field-meta.xml
<CustomField>
    <fullName>Direct_pmt_to_Parag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct pmt to Parag ?</label>
    <type>Checkbox</type>
</CustomField>