force-app/main/default/objects/Project__c/fields/Final_Settlement_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Settlement_Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Settlement Payment Received</label>
    <type>Checkbox</type>
</CustomField>