force-app/main/default/objects/Project__c/fields/Green_Threshold_Multiplier_c__c.field-meta.xml
<CustomField>
    <fullName>Green_Threshold_Multiplier_c__c</fullName>
    <label>Green_Threshold_Multiplier__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>