force-app/main/default/objects/Project__c/fields/Health_c__c.field-meta.xml
<CustomField>
    <fullName>Health_c__c</fullName>
    <formula>IF(
ISBLANK(Task_Score__c) || Task_Score__c = 0,
&quot;None&quot;,
IF(
Task_Score__c = 1,
&quot;🟢 Green&quot;,
IF(
Task_Score__c &gt; 2,
&quot;🔴 Red&quot;,
&quot;🟠 Orange&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health__c</label>
    <type>Text</type>
</CustomField>