force-app/main/default/objects/Project__c/fields/is_Invoice_required__c.field-meta.xml
<CustomField>
    <fullName>is_Invoice_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Invoice Required</label>
    <type>Checkbox</type>
</CustomField>