force-app/main/default/objects/Project__c/fields/pmt_to_Saasverse__c.field-meta.xml
<CustomField>
    <fullName>pmt_to_Saasverse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>pmt to Saasverse ?</label>
    <type>Checkbox</type>
</CustomField>