force-app/main/default/objects/Project__c/fields/Shadow_Resource_of__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Resource_of__c</fullName>
    <label>Shadow Resource of ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Anurag Bhatt</fullName>
            </value>
            <value>
                <fullName>Parag Bhatt</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>