force-app/main/default/objects/Project__c/fields/Supporting_Resource__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supporting Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Resource__c.Experience__c</field>
            <operation>greaterOrEqual</operation>
            <value>2</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Projects (Available Resource)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>