force-app/main/default/objects/Project__c/fields/Task_Score__c.field-meta.xml
<CustomField>
    <fullName>Task_Score__c</fullName>
    <label>Task Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>