force-app/main/default/objects/Project__c/recordTypes/Converted.recordType-meta.xml
<RecordType>
    <fullName>Converted</fullName>
    <active>true</active>
    <description>Projects got converted after every round</description>
    <label>Converted</label>
</RecordType>