force-app/main/default/objects/Project__c/recordTypes/Pipeline.recordType-meta.xml
<RecordType>
    <fullName>Pipeline</fullName>
    <active>true</active>
    <description>Projects that are not converted but there are very high chances that it could be converted.</description>
    <label>Pipeline</label>
</RecordType>