force-app/main/default/objects/Project__c/listViews/all1.listView-meta.xml
<ListView>
    <fullName>all1</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>all1</label>
</ListView>