force-app/main/default/objects/Project__c/listViews/Invoice_Required.listView-meta.xml
<ListView>
    <fullName>Invoice_Required</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>is_Invoice_required__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Invoice Required</label>
</ListView>